--- a/proekt.client/src/Styles/GamePage.css
+++ b/proekt.client/src/Styles/GamePage.css
@@ -2,7 +2,7 @@
     display: grid;
     place-items: center;
     margin-top: 20px;
-    background-color: aliceblue
+    background-color: whitesmoke
 }
 
 .gamePageText{
