--- a/proekt.client/src/Styles/Home.css
+++ b/proekt.client/src/Styles/Home.css
@@ -3,13 +3,12 @@
     max-width: 1700px;
     display: grid;
     padding: 30px;
-    background-color: #ffffff;
     color: black;
     padding-top: 0px;
 }
 
 :root {
-    background-color: white;
+    background-color: whitesmoke;
 }
 
 
